user session destroyed successfully

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -9,6 +9,7 @@
   <%= form.text_area :body %>
 </p>
 <p>
+	<%= hidden_field_tag 'article', '@article.article_id'  %>
   <%= form.submit %>
 </p>
 <% end %>
