--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing articles</h1>
-<h1>Hello <%= session[:current_user_email] %>   <%= link_to 'logout' , root_path %></h1> 
+<h1>Hello <%= session[:current_user_email] %>   <%= link_to 'logout' , users_logout_path %></h1> 
 <br>
 <%= link_to 'New article', new_article_path %>
 <table>
