--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,14 @@
 <p>
-	<strong>Commenter:</strong>
-	<%= comment.commenter %>
+  <strong>Commenter:</strong>
+  <%= comment.commenter %>
 </p>
 <p>
-	<strong>Comment:</strong>
-	<%= comment.body %>
+  <strong>Comment:</strong>
+  <%= comment.body %>
 </p>
 <p>
-	<%= link_to 'Delete Comment', [comment.article, comment],
-	method: :delete,
-	data: { confirm: 'Are you sure?' } %>
+  <td><%= link_to 'Show' , article_comment_path(@article,comment) %></td>
+  <%= link_to 'Delete Comment', [comment.article, comment],
+  method: :delete,
+  data: { confirm: 'Are you sure?' } %>
 </p>
