--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,11 @@
-<p>
-  <strong>Commenter:</strong>
-  <%= comment.commenter %>
-</p>
-<p>
-  <strong>Comment:</strong>
-  <%= comment.body %>
-</p>
-<p>
-  <td><%= link_to 'Show' , article_comment_path(@article,comment) %></td>
-  <%= link_to 'Delete Comment', [comment.article, comment],
-  method: :delete,
-  data: { confirm: 'Are you sure?' } %>
-</p>
+<table>
+	<tr>
+		<strong><%= comment.commenter %> : </strong>
+		<%= comment.body %>
+	</tr>
+	<tr>
+		<td><%= link_to 'Show' , comment_path(comment) %></td>
+		<td><%= link_to 'Edit', edit_comment_path(comment) %></td>
+		<td><%= link_to 'Destroy', comment, method: :delete %></td>
+	</tr>
+</table>
