--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,4 @@
-
-<%= form_with(model: [ @article, @article.comments.build ]) do |form| %>
+<%= form_with(model: [@article.comments.build], local: true) do |form| %>
 <p>
   <%= form.label :commenter %><br>
   <%= form.text_field :commenter %>
@@ -8,8 +7,8 @@
   <%= form.label :body %><br>
   <%= form.text_area :body %>
 </p>
+    <%= form.hidden_field :article_id, :value => @article.id %>
 <p>
-	<%= hidden_field_tag 'article', '@article.article_id'  %>
-  <%= form.submit %>
+  <%= form.submit "Comment" %>
 </p>
 <% end %>
