--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,2 +1,14 @@
 <h1>Edit Comment</h1>
-<%= render 'form' %>
+<%= form_with(model: @comment, local: true) do |form| %>
+<p>
+  <%= form.label :commenter %><br>
+  <%= form.text_field :commenter %>
+</p>
+<p>
+  <%= form.label :body %><br>
+  <%= form.text_area :body %>
+</p>
+<p>
+  <%= form.submit "Comment" %>
+</p>
+<% end %>
