--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,1 +1,17 @@
-<%= render @article.comments %>
+<h1>Comments</h1>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Text</th>
+    <th colspan=“3”></th>
+  </tr>
+  <% @comments.each do |comment| %>
+  <tr>
+    <td><%= comment.commenter %></td>
+    <td><%= comment.body %></td>
+    <td><%= link_to 'Show', comment_path(comment) %></td>
+    <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
+    <td><%= link_to 'Destroy', comment_path(comment), method: :delete %></td>
+  </tr>
+  <% end %>
+</table>
