--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,8 +1,10 @@
 <p>
-	<b>Commenter:</b>
-	<%= @comment.commenter %>
+  <b>Commenter:</b>
+  <%= @comment.commenter %>
 </p>
 <p>
-	<b>Body:</b>
-	<%= @comment.body %>
+  <b>Body:</b>
+  <%= @comment.body %>
 </p>
+<%= link_to 'Edit', edit_comment_path(@comment) %>
+<%= link_to 'All_Comments', comments_path %>
